feat: Java 21 baseline, Java 25 primary runtime, and Spring Framework 7 / Boot 4 canonical architecture (#26)